bib: Add mC4 dataset

--- a/main.bib
+++ b/main.bib
@@ -112,6 +112,16 @@
   primaryclass  = {cs.CL}
 }
 
+% mC4 dataset
+@misc{xue2021mt5,
+  title         = {mT5: A massively multilingual pre-trained text-to-text transformer},
+  author        = {Linting Xue and Noah Constant and Adam Roberts and Mihir Kale and Rami Al-Rfou and Aditya Siddhant and Aditya Barua and Colin Raffel},
+  year          = {2021},
+  eprint        = {2010.11934},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.CL}
+}
+
 % LaBSE
 @misc{feng2022languageagnostic,
   title         = {Language-agnostic BERT Sentence Embedding},
