bib: add Distillation, Rotary Position Embedding, SwiGLU. Change 2D Matryoshka to ESE

--- a/main.bib
+++ b/main.bib
@@ -92,6 +92,16 @@
   primaryclass  = {cs.CL}
 }
 
+% Distillation / DistilBERT
+@misc{sanh2020distilbert,
+      title={DistilBERT, a distilled version of BERT: smaller, faster, cheaper and lighter}, 
+      author={Victor Sanh and Lysandre Debut and Julien Chaumond and Thomas Wolf},
+      year={2020},
+      eprint={1910.01108},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
 % mE5
 @misc{wang2024multilingual,
   title         = {Multilingual E5 Text Embeddings: A Technical Report},
@@ -281,7 +291,7 @@
   primaryclass  = {cs.CL}
 }
 
-% nomic-embed-text-v1
+% nomic-embed-text
 @misc{nussbaum2024nomic,
   title         = {Nomic Embed: Training a Reproducible Long Context Text Embedder},
   author        = {Zach Nussbaum and John X. Morris and Brandon Duderstadt and Andriy Mulyar},
@@ -289,6 +299,26 @@
   eprint        = {2402.01613},
   archiveprefix = {arXiv},
   primaryclass  = {cs.CL}
+}
+
+% Rotary Position Embedding
+@misc{su2023roformer,
+      title={RoFormer: Enhanced Transformer with Rotary Position Embedding}, 
+      author={Jianlin Su and Yu Lu and Shengfeng Pan and Ahmed Murtadha and Bo Wen and Yunfeng Liu},
+      year={2023},
+      eprint={2104.09864},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
+% SwiGLU
+@misc{shazeer2020glu,
+      title={GLU Variants Improve Transformer}, 
+      author={Noam Shazeer},
+      year={2020},
+      eprint={2002.05202},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
 }
 
 % Matryoshka Representation Learning
@@ -327,14 +357,15 @@
   url    = {https://www.mixedbread.ai/blog/mxbai-embed-2d-large-v1}
 }
 
-% 2D Matryoshka Sentence Embeddings
-@misc{li20242d,
-  title         = {2D Matryoshka Sentence Embeddings},
-  author        = {Xianming Li and Zongxi Li and Jing Li and Haoran Xie and Qing Li},
-  year          = {2024},
-  eprint        = {2402.14776},
-  archiveprefix = {arXiv},
-  primaryclass  = {cs.CL}
+
+% ESE: Espresso Sentence Embeddings
+@misc{li2024ese,
+      title={ESE: Espresso Sentence Embeddings}, 
+      author={Xianming Li and Zongxi Li and Jing Li and Haoran Xie and Qing Li},
+      year={2024},
+      eprint={2402.14776},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
 }
 
 % SetFit
