add distillation citation to the TaylorAI model

--- a/src/methodology.tex
+++ b/src/methodology.tex
@@ -340,9 +340,9 @@ This study incorporates two distilled transformer models from TaylorAI for evalu
 
 \begin{itemize}
   \item \textbf{TaylorAI/BGE-micro-v2}\footnote{TaylorAI/bge-micro-v2 model on the huggingface website: \url{https://huggingface.co/TaylorAI/bge-micro-v2}}:
-    This model is a 2-step distilled version of the small \ac{BGE}-v1.5 model
+    This model is a 2-step distilled \cite{sanh2020distilbert} version of the small \ac{BGE}-v1.5 model
   \item \textbf{TaylorAI/GTE-tiny}\footnote{TaylorAI/gte-tiny model on the huggingface website: \url{https://huggingface.co/TaylorAI/gte-tiny}}:
-    This model is a distilled version of the small version of \ac{GTE} model
+    This model is a distilled \cite{sanh2020distilbert} version of the small version of \ac{GTE} model
 \end{itemize}
 
 % ember-v1
