Change chapters naming

--- a/src/experiments_and_results.tex
+++ b/src/experiments_and_results.tex
@@ -78,7 +78,7 @@ This approach ensures that the final selection of models for evaluation represen
 
 \input{src/tables/models_balanced.tex}
 
-\section{\ac{RAG} Optimization}
+\section{\ac{RAG} optimization}
 
 \reftab{tab:RAG_time} presents the retrieval time associated with the \ac{GTE}\textsubscript{Small} model for varying chunk sizes.
 
