--- a/src/literature_review.tex
+++ b/src/literature_review.tex
@@ -83,7 +83,7 @@ Finally, \ac{BERT}'s robustness allows it to handle nuances in text without sign
 
 \section{Methods of text representations evaluation}
 
-\subsection{Analogy Tests}
+\subsection{Analogy tests}
 
 Analogy tests, as demonstrated in the seminal Word2Vec paper \cite{mikolov2013efficient}, are a widely used method for assessing the quality of text representations, particularly word embeddings.
 These tests evaluate whether the semantic relationships between words are effectively captured and preserved within the vector space employed by the model.
