--- a/src/methodology.tex
+++ b/src/methodology.tex
@@ -7,7 +7,7 @@
 This work specifically targets the evaluation of word, sentence, and paragraph representation methods on datasets in the Czech language.
 This focus on Czech allows for a deeper understanding of how these methods perform in a language with specific characteristics, such as a rich inflectional morphology and the presence of diacritics.
 
-\subsection{Text Data Preparation}
+\subsection{Text data preparation}
 In certain foreign languages, a common issue arises when individuals incorrectly write words by omitting diacritics or altering letters, \reffig{fig:diacritics_diacriticless}.
 
 \begin{figure}[h]
@@ -364,7 +364,7 @@ Notably, the training process incorporates techniques inspired by both \ac{Retro
 % \end{enumerate}
 
 
-\section{Optimizing Text Representations for \ac{RAG} in Technical \ac{QA}}
+\section{Optimizing text representations for \ac{RAG} in technical \ac{QA}}
 
 \subsection{Key factors}
 To identify the most suitable text representation model for \ac{RAG} in technical \ac{QA}, we propose a comprehensive evaluation approach that considers the following key factors:
@@ -385,7 +385,7 @@ To identify the most suitable text representation model for \ac{RAG} in technica
     This ensures the generated answers are reliable and trustworthy for the user.
 \end{itemize}
 
-\subsection{Chunk Size and K Parameter Selection}
+\subsection{Chunk size and K parameter selection}
 This section explores the selection of chunk sizes and the corresponding K parameter for evaluation using the \ac{RAG} model.
 The chunk size refers to the length of text passages (number of characters) that will be processed by the \ac{RAG} model during evaluation.
 The K parameter, on the other hand, determines the number of retrieved passages that the \ac{RAG} model will consider when generating a response.
