--- a/main.bib
+++ b/main.bib
@@ -421,14 +421,14 @@
 }
 
 % GPT-3.5-turbo 
-@misc{brown2020language,
-  title         = {Language Models are Few-Shot Learners},
-  author        = {Tom B. Brown and Benjamin Mann and Nick Ryder and Melanie Subbiah and Jared Kaplan and Prafulla Dhariwal and Arvind Neelakantan and Pranav Shyam and Girish Sastry and Amanda Askell and Sandhini Agarwal and Ariel Herbert-Voss and Gretchen Krueger and Tom Henighan and Rewon Child and Aditya Ramesh and Daniel M. Ziegler and Jeffrey Wu and Clemens Winter and Christopher Hesse and Mark Chen and Eric Sigler and Mateusz Litwin and Scott Gray and Benjamin Chess and Jack Clark and Christopher Berner and Sam McCandlish and Alec Radford and Ilya Sutskever and Dario Amodei},
-  year          = {2020},
-  eprint        = {2005.14165},
-  archiveprefix = {arXiv},
-  primaryclass  = {cs.CL}
+@misc{openai2023gpt35turbo,
+  author = {OpenAI},
+  title = {GPT-3.5-turbo},
+  year = {2023},
+  howpublished = {\url{https://platform.openai.com/docs/models/gpt-3-5}},
+  note = {Accessed: 2024-05-24}
 }
+
 
 % Umar Jamil YouTube Channel
 @misc{umarjamilai,
